Use Train set on Cross validation score

--- a/winedataClassification.ipynb
+++ b/winedataClassification.ipynb
@@ -70,11 +70,11 @@
         "print(feature_names)"
       ],
       "metadata": {
-        "id": "6PqKl_m3Vumk",
-        "outputId": "c6853e51-edc8-4331-f8a3-9d403724fbfa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6PqKl_m3Vumk",
+        "outputId": "c6853e51-edc8-4331-f8a3-9d403724fbfa"
       },
       "execution_count": 18,
       "outputs": [
@@ -787,25 +787,25 @@
       "source": [
         "\n",
         "# Perform 5-Fold Cross-Validation\n",
-        "cv_scores = cross_val_score(svm_model, X, y, cv=5)\n",
+        "cv_scores = cross_val_score(svm_model, X_train, y_train, cv=5)\n",
         "print(f\"Cross-Validation Scores: {cv_scores}\")\n",
-        "print(f\"Mean Cross-Validation Accuracy: {np.mean(cv_scores):.2f}\")"
+        "print(f\"Mean Cross-Validation Accuracy: {cv_scores.mean():.2f}\")"
       ],
       "metadata": {
         "id": "UdCxFi4iaUVw",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4a0fd733-5d5c-4bdd-b6ad-2f4223946a4e"
+        "outputId": "8f038fa4-0736-41f1-99f1-7f5a78f37354"
       },
-      "execution_count": 12,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cross-Validation Scores: [0.88888889 0.94444444 0.97222222 1.         1.        ]\n",
-            "Mean Cross-Validation Accuracy: 0.96\n"
+            "Cross-Validation Scores: [0.96       0.96       1.         1.         0.95833333]\n",
+            "Mean Cross-Validation Accuracy: 0.98\n"
           ]
         }
       ]
